# mini

./: CMakeLists.txt  CMakePresets.json  mini.cpp  mini.h  vcpkg.json
TimeTest/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hxx
base/: CMakeLists.txt
base/include/: bitmap_base.hxx  confirm.hxx  dpi_scaling.hxx  gr_basic.hxx  kiid.hxx  layer_ids.hxx  render_settings.hxx  richio.hxx  trace_helpers.hxx
base/src/: bitmap_base.cpp  color4d.cpp  confirm.cpp  dpi_scaling.cpp  kiid.cpp  render_settings.cpp  trace_helpers.cpp
core/: CMakeLists.txt
core/include/: kicad_algo.hxx  mirror.hxx  observable.hxx  profile.hxx  utf8.hxx
core/src/: observable.cpp  profile.cpp  utf8.cpp
data/: CMakeLists.txt
data/include/: data_board_item.hxx  data_circle.hxx  data_line.hxx  data_manager.hxx  data_painter.hxx  data_rectangle.hxx  data_render_settings.hxx  data_triangle.hxx  item.hxx
data/src/: data_board_item.cpp  data_circle.cpp  data_line.cpp  data_manager.cpp  data_painter.cpp  data_rectangle.cpp  data_render_settings.cpp  data_triangle.cpp  item.cpp
gal/: CMakeLists.txt
gal/include/: antialiasing.hxx  cached_container.hxx  cached_container_gpu.hxx  cached_container_ram.hxx  color4d.hxx  cursors.hxx  gal.hxx  gal_display_options.hxx  gl_context_mgr.hxx  gl_resources.hxx  gl_utils.hxx  gpu_manager.hxx  graphics_abstraction_layer.hxx  noncached_container.hxx  opengl_compositor.hxx  opengl_gal.hxx  painter.hxx  shader.hxx  utils.hxx  vertex_common.hxx  vertex_container.hxx  vertex_item.hxx  vertex_manager.hxx
gal/shaders/: mini_frag.glsl  mini_frag_texture.glsl  mini_vert.glsl  mini_vert_texture.glsl  shader.frag  shader.vert
gal/src/: antialiasing.cpp  cached_container.cpp  cached_container_gpu.cpp  cached_container_ram.cpp  color4d.cpp  cursors.cpp  gal_display_options.cpp  gl_context_mgr.cpp  gl_resources.cpp  gpu_manager.cpp  graphics_abstraction_layer.cpp  noncached_container.cpp  opengl_compositor.cpp  opengl_gal.cpp  painter.cpp  shader.cpp  utils.cpp  vertex_container.cpp  vertex_item.cpp  vertex_manager.cpp
math/: CMakeLists.txt
math/include/: approximation.hxx  bezier_curves.hxx  box2.hxx  box2_minmax.hxx  circle.hxx  convert_basic_shapes_to_polygon.hxx  corner_operations.hxx  corner_strategy.hxx  direction45.hxx  eda_angle.hxx  ellipse.hxx  geometry_utils.hxx  half_line.hxx  line.hxx  matrix3x3.hxx  mmh3_hash.hxx  point_types.hxx  polygon_triangulation.hxx  seg.hxx  shape.hxx  shape_arc.hxx  shape_circle.hxx  shape_compound.hxx  shape_line_chain.hxx  shape_poly_set.hxx  shape_rect.hxx  shape_segment.hxx  shape_simple.hxx  shape_utils.hxx  trigo.hxx  util.hxx  vector2d.hxx  vector2wx.hxx  vector3.hxx  vector_utils.hxx  vertex_set.hxx
math/src/: bezier_curves.cpp  circle.cpp  convert_basic_shapes_to_polygon.cpp  corner_operations.cpp  direction_45.cpp  eda_angle.cpp  ellipse.cpp  geometry_utils.cpp  half_line.cpp  line.cpp  seg.cpp  shape.cpp  shape_arc.cpp  shape_collisions.cpp  shape_compound.cpp  shape_line_chain.cpp  shape_poly_set.cpp  shape_rect.cpp  shape_segment.cpp  shape_utils.cpp  trigo.cpp  util.cpp  vector2.cpp  vector_utils.cpp  vertex_set.cpp
resources/: CMakeLists.txt
test/: testGal.cpp  testView.cpp
view/: CMakeLists.txt
view/include/: draw_panel_gal.hxx  view.hxx  view_control.hxx  view_data.hxx  view_def.hxx  view_item.hxx  view_rtree.hxx
view/src/: draw_panel_gal.cpp  view.cpp  view_control.cpp  view_item.cpp
widget/: CMakeLists.txt
widget/include/: draw_panel_gal.hxx  mini_frame.hxx
widget/src/: draw_panel_gal.cpp  mini_frame.cpp
